# SpotFinder---Autonomous-Sustainable-Urban-Parking-System

./: README.md
documentation/: UR001.md  UR003.md  UR004.md  UR005.md  UR006.md  UR007.md  UR008.md  UR009.md  architecture.md  project_management.md
sf_driving_controller/: README.md  package.xml  setup.cfg  setup.py
sf_driving_controller/resource/: test_driving_controller_readme.md
sf_driving_controller/sf_driving_controller/: driving_controller.py  parking_manoeuver.py  pure_pursuit.py
sf_driving_controller/test/: driving_controller_pylint_score.json  parking_pylint_score.json  test_parking_maneuver.py
sf_env/: README.md  package.xml  setup.cfg  setup.py
sf_env/resource/: integration_test_report.md  static_report.json
sf_env/sf_env/: sf_env.py  test_helper.py
sf_env/test/: test_env_model.py
sf_localization/: README.md  package.xml  setup.cfg  setup.py
sf_localization/resource/: static_report.json
sf_localization/sf_localization/: sf_ego_localization.py
sf_localization/test/: localization_integration_test.py  localization_unittest.py
sf_mi/: README.md  package.xml  setup.cfg  setup.py
sf_mi/SpotFinder/app/: build.gradle.kts
sf_mi/SpotFinder/app/src/main/: AndroidManifest.xml
sf_mi/SpotFinder/app/src/main/java/com/example/spotfinder/: MainActivity.kt  Objects.kt  RequestWorker.kt  RetrofitInstance.kt
sf_mi/SpotFinder/app/src/main/java/com/example/spotfinder/ui/theme/: Color.kt  Theme.kt
sf_mi/SpotFinder/app/src/main/res/layout/: login.xml  map.xml  sign_in.xml
sf_mi/SpotFinder/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
sf_mi/SpotFinder/gradle/: libs.versions.toml
sf_mi/SpotFinder/gradle/wrapper/: gradle-wrapper.properties
sf_mi/resource/: User_data  int_MI_report.md
sf_mi/sf_mi/: sf_mi.py
sf_mi/test/: Int_MI.py  MI_static_report.json  test_mi.py
sf_model_city_map/: README.md  package.xml  setup.cfg  setup.py
sf_model_city_map/Map/: map.pgm
sf_msgs/: CMakeLists.txt  package.xml
sf_path_plan/: README.md  package.xml  setup.cfg  setup.py
sf_traffic_monitor/: README.md  package.xml  setup.cfg  setup.py
sf_ui/: README.md  package.xml  setup.cfg  setup.py
sf_v2x_com/: README.md  package.xml  setup.cfg  setup.py
sf_v2x_com/resource/: integration_test_report.md  static_result_receiver.json  static_result_transmitter.json
sf_v2x_com/sf_v2x_com/: receiver.py  transmitter.py
sf_v2x_com/test/: test_v2x_com_receiver.py  test_v2x_com_transmitter.py  test_v2x_com_transmitter_2.py
sf_v2x_server/: README.md  package.xml  setup.cfg  setup.py
(+46 files in other folders)
