<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sf_mi</name>
  <version>0.0.1</version>
  <description>ROS 2 package integrating Flask to manage vehicle information</description>
  <maintainer email="par6224s@hs-coburg.de">parth_0531</maintainer>
  <license>TODO - Replace with actual license</license>

  <!-- Regular dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sf_msgs</depend>
 
  <exec_depend>python3-flask</exec_depend> 

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
